Fix compilation errors: import EntityAnchorArgumentType and use Arrays.asList